--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,14 +4,11 @@
 ;
 }
 
-/*Topo Celular*/
+/*Conteúdo Celular*/
 body {
     background-color: var(--cor-de-fundo);
 }
 
-/*Topo Tablet*/
-
-/*Topo Desktop*/
 
 /*Conteúdo Celular*/
 
