--- a/estilos/carrossel.css
+++ b/estilos/carrossel.css
@@ -51,7 +51,7 @@
 }
 
 .descrição__titulo-livro {
-    color: var(--azul-degrade);
+    color: #002F52;
     font-size: 18px;
     font-weight: 700;
     margin: 0.5em 0;
