--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -20,7 +20,7 @@
     border: 1px solid var(--branco);
     color: var(--branco);
     border-radius: 24px;
-    padding: 1em;
+    padding: 0.8em;
     width: 100%;
 }
 
@@ -31,5 +31,33 @@
     text-align: center;
     color: var(--branco);
     background: url("../imagens/Lupa.svg") no-repeat;
-    background-position: 1em;
+    background-position: 0.2em;
+}
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
 }
