--- a/estilos/contato.css
+++ b/estilos/contato.css
@@ -1,3 +1,5 @@
+/*Desiner para Celular*/
+
 .contato {
     background-color: var(--branco);
     padding: 1em;
@@ -35,6 +37,8 @@
     background: url("../imagens/Email.svg") no-repeat;
     padding-left: 2em;
 }
+
+/*Desiner para tablet*/
 
 @media screen and (min-width: 1024px) {
     .contato {
