--- a/estilos/topicos.css
+++ b/estilos/topicos.css
@@ -1,3 +1,5 @@
+/*Desiner para Celular*/
+
 .tópicos {
     background: var(--azul-degrade);
     text-align: center;
@@ -28,6 +30,8 @@
     font-size: 14px;
     font-weight: 700;
 }
+
+/*Desiner para tablet*/
 
 @media screen and (min-width: 1024px) {
     .tópicos__titulo {
