--- a/estilos/carrossel.css
+++ b/estilos/carrossel.css
@@ -102,6 +102,8 @@
     }
 }
 
+/*Desiner para Desktop*/
+
 @media screen and (min-width: 1728px) {
     .carrossel__container {
         display: flex;
