--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -52,13 +52,15 @@
     }
 }
 
+/*Desiner para Desktop*/
+
 @media screen and (min-width: 1728px) {
     .banner__pesquisa {
         width: 35%;
     }
 
     .banner__pesquisa::placeholder {
-        background-position: 12em;
+        background-position: 10em;
     }
 
     .banner {
