--- a/estilos/topicos.css
+++ b/estilos/topicos.css
@@ -43,8 +43,10 @@
     }
 }
 
+/*Desiner para Desktop*/
+
 @media screen and (min-width: 1728px) {
     .tópicos {
-        padding: 3em 30vw;
+        padding: 5em 28vw;
     }
 }
